# zoo

./: .gitignore  pyproject.toml
demo/: mnist.html
notebook/: cifar.ipynb  gpt.ipynb  gpt_fixed.ipynb  grpo.ipynb  gsm8k.ipynb  gsm_8k.ipynb  llama-cpp.ipynb  mnist.ipynb
notebook/custom/: data.ipynb  gpt.ipynb  grpo.ipynb  textbooks.ipynb  unsloth.ipynb
notebook/gemma-3-1b-it.gguf/: config.json  generation_config.json
src/zoo/: __init__.py
src/zoo/utils/: __init__.py  get_device.py
