[project]
name = "zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karan Ravindra", email = "21176108+karanravindra@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "flashinfer-python>=0.6.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "liger-kernel>=0.7.0",
    "lightning>=2.6.1",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.6.2",
    "peft>=0.18.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "trl>=0.24.0",
    "unsloth>=2026.2.1",
    "vllm==0.10.2",
    "wandb>=0.25.0",
]

[project.scripts]
zoo = "zoo:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
