[project]
name = "zoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karan Ravindra", email = "21176108+karanravindra@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "anywidget>=0.9.21",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "datasketch>=1.9.0",
    "flashinfer-python>=0.6.4; sys_platform != 'darwin'",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "liger-kernel>=0.7.0",
    "liger-kernel>=0.7.0; sys_platform != 'darwin'",
    "lightning>=2.6.1",
    "llama-cpp-python>=0.3.16",
    "matplotlib>=3.10.8",
    "mslk>=0.0.0",
    "mwparserfromhell>=0.7.2",
    "nbformat>=5.10.4",
    "ollama>=0.6.1",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.6.2",
    "peft>=0.18.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.8.0",
    "torchao>=0.16.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "trl>=0.24.0",
    "unsloth>=2026.2.1; sys_platform != 'darwin'",
    "vllm==0.10.2; sys_platform != 'darwin'",
    "wandb>=0.25.0",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[project.scripts]
zoo = "zoo:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
